create: added section footer

--- a/index.html
+++ b/index.html
@@ -741,6 +741,147 @@ Build Products"
       <!-- /.subscribe-container -->
     </section>
     <!-- /.subscribe -->
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-wrp">
+          <a href="index.html" class="logo footer__logo">
+            <img src="img/Logo.svg" alt="Icon: logo" class="logo__img" />
+          </a>
+          <p class="footer__text">
+            Создайте современный и креативный веб-сайт с crealand
+          </p>
+          <div class="footer__socials">
+            <a
+              href="https://www.google.ru/"
+              class="social footer__social"
+              target="_blank"
+            >
+              <img
+                src="img/footer/google.svg"
+                alt="Google"
+                class="footer__icon" /></a
+            ><a
+              href="https://twitter.com/"
+              class="social footer__social"
+              target="_blank"
+            >
+              <img
+                src="img/footer/twitter.svg"
+                alt="twitter"
+                class="footer__icon" /></a
+            ><a
+              href="https://www.instagram.com/"
+              class="social footer__social"
+              target="_blank"
+            >
+              <img
+                src="img/footer/instagram.svg"
+                alt="Instagram"
+                class="footer__icon" /></a
+            ><a
+              href="https://www.linkedin.com/"
+              class="social footer__social"
+              target="_blank"
+            >
+              <img src="img/footer/in.svg" alt="linkedin" class="footer__icon"
+            /></a>
+          </div>
+          <!-- /.footer__socials -->
+          <div class="footer__menu footer__product">
+            <h4 class="footer__subtitle">Продукт</h4>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Лэндинг</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Функции</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Документация</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Скидки</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Расценки</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__menu footer__product -->
+
+          <div class="footer__menu footer__services">
+            <h4 class="footer__subtitle">Сервисы</h4>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Документация</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Дизайн</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Темы</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Илюстрации</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">UI Kit</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__menu footer__product -->
+
+          <div class="footer__menu footer__company">
+            <h4 class="footer__subtitle">Компания</h4>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">О нас</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Условия</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy Policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__menu footer__product -->
+
+          <div class="footer__menu footer__more">
+            <h4 class="footer__subtitle">Еще..</h4>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Документация</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Лицензия</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Изменения</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer__menu footer__product -->
+
+          <div class="footer__credits">
+            <a href="#" class="footer__heart">
+              <img src="img/footer/heart.svg" alt="Icon: heart" />
+            </a>
+            <span class="footer__copyright"
+              >Copyright © 2019. Crafted with love.</span
+            >
+          </div>
+          <!-- /.footer__credits -->
+        </div>
+        <!-- /.footer-wrp -->
+      </div>
+      <!-- /.container -->
+    </footer>
+    <!-- /.footer -->
     <script src="https://use.fontawesome.com/e3087e072a.js"></script>
     <script
       src="https://kit.fontawesome.com/08a673d80a.js"
