--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ Build Products"
             <!-- author__video -->
             <div class="author__info">
               <a href="#" class="author__link">
-                <h3 class="author__subtitle">Emelda Scandroot</h3>
+                <h3 class="author__subtitle">Mar Rueda</h3>
               </a>
               <span class="author__desc">Author of Books Tittle</span>
             </div>
@@ -528,7 +528,7 @@ Build Products"
             <!-- author__video -->
             <div class="author__info">
               <a href="#" class="author__link">
-                <h3 class="author__subtitle">Emelda Scandroot</h3>
+                <h3 class="author__subtitle">Nembo Lukeni</h3>
               </a>
               <span class="author__desc">Author of Books Tittle</span>
             </div>
@@ -644,7 +644,9 @@ Build Products"
               <img src="img/blog/pic-1.jpg" alt="pic-1" class="blog__img" />
             </div>
             <a href="#" class="blog__link-subtitle">
-              <h3 class="blog__title">Success Steps For Your Business Life</h3>
+              <h3 class="blog__title-1">
+                Success Steps For Your Business Life
+              </h3>
             </a>
             <p class="blog__text">
               This is the author story section. Every week we try to give you
