--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             <div class="video__play">
               <a
                 data-fancybox
-                href="https://www.youtube.com/watch?v=HmFg1vy2Cf0"
+                href="https://www.youtube.com/watch?v=Z1OfXxH_uiw&t=127s"
               >
                 <svg class="video__play-icon">
                   <use xlink:href="img/sprite.svg#play"></use>
@@ -495,7 +495,7 @@
                 <img src="img/story-2.png" alt="" class="video-list__img" />
                 <a
                   data-fancybox
-                  href="https://www.youtube.com/watch?v=0Go9zH8SuFo"
+                  href="https://www.youtube.com/watch?v=i2THjiiPXfM"
                 >
                   <svg class="video-list__play-icon">
                     <use xlink:href="img/sprite.svg#play"></use>
@@ -520,7 +520,7 @@
                 <img src="img/story-3.png" alt="" class="video-list__img" />
                 <a
                   data-fancybox
-                  href="https://www.youtube.com/watch?v=R1OvwseHl6U"
+                  href="https://www.youtube.com/watch?v=yCPOJrkl6cs"
                 >
                   <svg class="video-list__play-icon">
                     <use xlink:href="img/sprite.svg#play"></use>
@@ -545,7 +545,7 @@
                 <img src="img/story-4.png" alt="" class="video-list__img" />
                 <a
                   data-fancybox
-                  href="https://www.youtube.com/watch?v=egUjOwktfs0"
+                  href="https://www.youtube.com/watch?v=-0gCf75bBsA"
                 >
                   <svg class="video-list__play-icon">
                     <use xlink:href="img/sprite.svg#play"></use>
