--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header header--mobile" id="header">
       <div class="container">
         <div class="header-wrapper">
-          <a href="#">
+          <a href="index.html">
             <img src="img/logo.png" alt="Логотип: ehya" class="header__logo" />
           </a>
           <div class="header-left">
@@ -715,7 +715,7 @@
       <div class="container">
         <div class="footer-wrapper">
           <div class="footer__info">
-            <a href="#"
+            <a href="index.html"
               ><img src="img/logo.png" alt="" class="footer__logo"
             /></a>
             <span class="footer__description"
